# BaiscF3BoilerplateRust

./: Cargo.toml  openocd.gdb
src/: main.rs
