[package]
name = "basicBoilerPlateF3"
version = "0.1.0"
authors = ["Zain <zainulabideenbawa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.5.6"
panic-halt = "0.2.0"
cortex-m-rt = "0.6.10"

[dependencies.f3]
features = ["rt"]
version = "0.6.1"